tests/NormalTests/paczka1/fuzzy1/86218251.err
Error in line 10: lZE7ZF A219 48,9
Error in line 14: lZE7ZF A575 31,8
Error in line 27: iKC A219 16,1
